--- a/week_13/index.html
+++ b/week_13/index.html
@@ -5,8 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>week 13</title>
+
+    <!-- external link -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- dibawah ini adalah contoh internal CSS -->
+
+    <!-- warna bisa text, rgb dan hexa (yg pakai #) -->
+<style>
+h1{
+    color: darkblue;
+}
+</style>
+
 </head>
-<body>
+<!-- contoh inline CSS  -->
+<body style="background-color: yellow"></body>
+<div class="container"> 
+    tulisan dengan tag <b> b / bold </b>
+    <br>
+    <!-- br adalah break line, buat baris baru -->
+    tulisan dengan tag <i> i / italic </i>
+
+    contoh kombinasi <b><i> bold & italic</i></b>
+    <br>
+
+    <div style="border: 5px solid black">
+       border : 5px solid black
+</div>
+<div style="
+  border-color: lawngreen;
+  border-style: groove;
+  border-width: 5px;
+  font-size: 2em;"
+>
+  border long code 
+</div> 
+
+<div style="border:crimson solid; padding:2em;" >
+    border with padding
+
+></div>
+<div style="border:crimson solid ; margin:2em;" >
+        border with margin
+
+</div>
+
+<div style="
+width:48%;
+display: inline-block;
+border:red 1px solid;
+padding: lem;
+">
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+</div>
+
+<div style="
+width:48%;
+display: inline-block;
+border:red 1px solid;
+padding: lem;
+">
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+</div>
+ 
     
 </body>
 </html>
